# ImproSolutions

./: README.md  app.py  config.py  db_models.py  db_utils.py  email_generator.py  models.py  pyproject.toml  reqq.txt  test.py
attached_assets/: Pasted--Replit-Software-Build-Request-for-AI-Driven-Procurement-Software-Project-Name-ProcureIQ-1747070342968.txt
routes/: rfq.py  vendor.py
services/: ai_service.py  content_verifier.py  document_processor.py  email_modifier.py  email_pipeline.py  read_pdf.py  send_notification.py
static/js/: data_extraction.js  main.js  vendor_matching.js
templates/: data_extraction.html
